--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http": "0.0.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
