--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,16 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-emoji": "^0.5.0",
+    "react-popper": "^1.3.7",
+    "react-redux": "^7.2.0",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
