--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,13 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.4",
     "morgan": "~1.9.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
