--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "events": "^3.1.0",
+    "moment": "^2.24.0",
     "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
