--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "express-session": "^1.17.0",
+    "http": "0.0.1-security",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
