--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-emoji": "^0.5.0",
+    "react-icons": "^3.9.0",
     "react-popper": "^1.3.7",
     "react-redux": "^7.2.0",
     "react-redux-form": "^1.16.14",
