--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
     "react-scripts": "3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
