--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "query-string": "^6.11.1",
     "react": "^16.13.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-emoji": "^0.5.0",
     "react-icons": "^3.9.0",
