--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --ignore 'sessions/' index.js"
+    "dev": "nodemon --ignore 'sessions/' index.js -dev"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
