--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "session-file-store": "^1.4.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
