--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
